--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "Classic"
+title = "River's Blog"
 theme = "hugo-classic"
 googleAnalytics = ""
 ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
@@ -24,10 +24,10 @@ footnotereturnlinkcontents = "↩"
     url = "/tags/"
     weight = 3
 [[menu.feed]]
-    name = "Subscribe"
+    name = "rss"
     url = "/index.xml"
 
 [params]
-    description = "A simple, minimal blog for those who love text."
-    footer = "Open-Source | [Github](https://github.com/goodroot/hugo-classic) | [Twitter](https://twitter.com/thegoodroot)"
+    description = "This is river's blog!"
+    footer = "[GitHub](https://github.com/rivergillis) | [Twitter](https://twitter.com/rivergillis) | [Email](mailto:jrivergillis@gmail.com)"
     custom_css = ["css/theme-override.css"]
