mess with about page

--- a/config.toml
+++ b/config.toml
@@ -23,6 +23,10 @@ footnotereturnlinkcontents = "↩"
     name = "Tags"
     url = "/tags/"
     weight = 3
+[[menu.main]]
+    name = "About"
+    url = "/about/"
+    weight = 4
 [[menu.feed]]
     name = "rss"
     url = "/index.xml"
